--- a/shopp-advanced-validation/css/creditcards.css
+++ b/shopp-advanced-validation/css/creditcards.css
@@ -1,44 +1,133 @@
-#shopp #checkout li.payment input[type="text"] {
-height: 26px;
--moz-box-sizing: content-box;
--webkit-box-sizing: content-box;
+#shopp #checkout li.payment input[type="text"]
+{
+	height: 26px;
+	-moz-box-sizing: content-box;
+	-webkit-box-sizing: content-box;
 }
 
-#shopp #checkout input#billing-card {
-  background-image: url(creditcards.png), url(creditcards.png);
-  background-position: 2px -121px, 260px -61px;
-  background-size: 120px 361px, 120px 361px;
-  background-repeat: no-repeat;
-  padding-left: 65px;
-  width: 215px;
+#shopp #checkout input#billing-card
+{
+	background-image: url(creditcards.png), url(creditcards.png);
+	background-position: 2px -121px, 260px -61px;
+	background-size: 120px 361px, 120px 361px;
+	background-repeat: no-repeat;
+	padding-left: 65px;
+	width: 215px;
 }
-#shopp #checkout input#billing-card.visa {
-  background-position: 2px -163px, 260px -61px;
+
+#shopp #checkout input#billing-card.visa { background-position: 2px -163px, 260px -61px; }
+#shopp #checkout input#billing-card.visa_electron { background-position: 2px -205px, 260px -61px; }
+#shopp #checkout input#billing-card.mastercard { background-position: 2px -247px, 260px -61px; }
+#shopp #checkout input#billing-card.maestro { background-position: 2px -289px, 260px -61px; }
+#shopp #checkout input#billing-card.discover { background-position: 2px -331px, 260px -61px; }
+#shopp #checkout input#billing-card.valid.visa { background-position: 2px -163px, 260px -87px; }
+#shopp #checkout input#billing-card.valid.visa_electron { background-position: 2px -205px, 260px -87px; }
+#shopp #checkout input#billing-card.valid.mastercard { background-position: 2px -247px, 260px -87px; }
+#shopp #checkout input#billing-card.valid.maestro { background-position: 2px -289px, 260px -87px; }
+#shopp #checkout input#billing-card.valid.discover { background-position: 2px -331px, 260px -87px; }
+
+#apple-pay-button
+{
+	display: none;
+	background-size: 100% 60%;
+	background-origin: content-box;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	border-radius: 5px;
+	padding: 10px 0;
+	box-sizing: border-box;
+	min-width: 200px;
+	min-height: 32px;
+	max-height: 64px;
 }
-#shopp #checkout input#billing-card.visa_electron {
-  background-position: 2px -205px, 260px -61px;
+
+.apple-pay-button-black
+{
+	background-image: -webkit-named-image(apple-pay-logo-white);
+	background-color: black;
 }
-#shopp #checkout input#billing-card.mastercard {
-  background-position: 2px -247px, 260px -61px;
+
+.apple-pay-button-white
+{
+	background-image: -webkit-named-image(apple-pay-logo-black);
+	background-color: white;
 }
-#shopp #checkout input#billing-card.maestro {
-  background-position: 2px -289px, 260px -61px;
+
+.apple-pay-button-white-with-line
+{
+	background-image: -webkit-named-image(apple-pay-logo-black);
+	background-color: white;
+	border: .5px solid black;
 }
-#shopp #checkout input#billing-card.discover {
-  background-position: 2px -331px, 260px -61px;
+
+.apple-pay-button-with-text
+{
+	--apple-pay-scale: 1;
+	/* (height / 32) */
+	display: inline-flex;
+	justify-content: center;
+	font-size: 12px;
+	border-radius: 5px;
+	padding: 0px;
+	box-sizing: border-box;
+	min-width: 200px;
+	min-height: 32px;
+	max-height: 64px;
 }
-#shopp #checkout input#billing-card.valid.visa {
-  background-position: 2px -163px, 260px -87px;
+
+.apple-pay-button-black-with-text
+{
+	background-color: black;
+	color: white;
 }
-#shopp #checkout input#billing-card.valid.visa_electron {
-  background-position: 2px -205px, 260px -87px;
+
+.apple-pay-button-white-with-text
+{
+	background-color: white;
+	color: black;
 }
-#shopp #checkout input#billing-card.valid.mastercard {
-  background-position: 2px -247px, 260px -87px;
+
+.apple-pay-button-white-with-line-with-text
+{
+	background-color: white;
+	color: black;
+	border: .5px solid black;
 }
-#shopp #checkout input#billing-card.valid.maestro {
-  background-position: 2px -289px, 260px -87px;
+
+.apple-pay-button-with-text.apple-pay-button-black-with-text > .logo
+{
+	background-image: -webkit-named-image(apple-pay-logo-white);
+	background-color: black;
 }
-#shopp #checkout input#billing-card.valid.discover {
-  background-position: 2px -331px, 260px -87px;
+
+.apple-pay-button-with-text.apple-pay-button-white-with-text > .logo
+{
+	background-image: -webkit-named-image(apple-pay-logo-black);
+	background-color: white;
+}
+
+.apple-pay-button-with-text.apple-pay-button-white-with-line-with-text > .logo
+{
+	background-image: -webkit-named-image(apple-pay-logo-black);
+	background-color: white;
+}
+
+.apple-pay-button-with-text > .text
+{
+	font-family: -apple-system;
+	font-size: calc(1em * var(--apple-pay-scale));
+	font-weight: 300;
+	align-self: center;
+	margin-right: calc(2px * var(--apple-pay-scale));
+}
+
+.apple-pay-button-with-text > .logo
+{
+	width: calc(35px * var(--scale));
+	height: 100%;
+	background-size: 100% 60%;
+	background-repeat: no-repeat;
+	background-position: 0 50%;
+	margin-left: calc(2px * var(--apple-pay-scale));
+	border: none;
 }
