--- a/shopp-advanced-validation/css/creditcards.css
+++ b/shopp-advanced-validation/css/creditcards.css
@@ -26,108 +26,99 @@
 #shopp #checkout input#billing-card.valid.maestro { background-position: 2px -289px, 260px -87px; }
 #shopp #checkout input#billing-card.valid.discover { background-position: 2px -331px, 260px -87px; }
 
-#apple-pay-button
-{
-	display: none;
-	background-size: 100% 60%;
-	background-origin: content-box;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	border-radius: 5px;
-	padding: 10px 0;
-	box-sizing: border-box;
-	min-width: 200px;
-	min-height: 32px;
-	max-height: 64px;
+#apple-pay-box { display: none; }
+
+#apple-pay-button {
+    display: block;
+    background-color: black;
+    background-image: -webkit-named-image(apple-pay-logo-white);
+    background-size: 100% 100%;
+    background-origin: content-box;
+    background-repeat: no-repeat;
+    width: 50%;
+    height: 44px;
+    padding: 10px 0;
+    border-radius: 10px;
 }
 
-.apple-pay-button-black
-{
-	background-image: -webkit-named-image(apple-pay-logo-white);
-	background-color: black;
+#apple-pay-button:disabled {
+    opacity: 0.3;
+    cursor: not-allowed;
 }
 
-.apple-pay-button-white
-{
-	background-image: -webkit-named-image(apple-pay-logo-black);
-	background-color: white;
-}
+@supports (-webkit-appearance: -apple-pay-button) {
+    .apple-pay-button-with-text {
+        display: inline-block;
+        -webkit-appearance: -apple-pay-button;
+        -apple-pay-button-type: buy;
+    }
 
-.apple-pay-button-white-with-line
-{
-	background-image: -webkit-named-image(apple-pay-logo-black);
-	background-color: white;
-	border: .5px solid black;
-}
+    .apple-pay-button-with-text > * {
+        display: none;
+    }
 
-.apple-pay-button-with-text
-{
-	--apple-pay-scale: 1;
-	/* (height / 32) */
-	display: inline-flex;
-	justify-content: center;
-	font-size: 12px;
-	border-radius: 5px;
-	padding: 0px;
-	box-sizing: border-box;
-	min-width: 200px;
-	min-height: 32px;
-	max-height: 64px;
+    .apple-pay-button-black-with-text {
+        -apple-pay-button-style: black;
+    }
+    .apple-pay-button-white-with-text {
+        -apple-pay-button-style: white;
+    }
+    .apple-pay-button-white-with-line-with-text {
+        -apple-pay-button-style: white-outline;
+    }
 }
-
-.apple-pay-button-black-with-text
-{
-	background-color: black;
-	color: white;
+@supports not (-webkit-appearance: -apple-pay-button) {
+.apple-pay-button-with-text {
+    --apple-pay-scale: 1; /* (height / 32) */
+    display: inline-flex;
+    justify-content: center;
+    font-size: 12px;
+    border-radius: 5px;
+    padding: 0px;
+    box-sizing: border-box;
+    min-width: 200px;
+    min-height: 32px;
+    max-height: 64px;
 }
-
-.apple-pay-button-white-with-text
-{
-	background-color: white;
-	color: black;
+.apple-pay-button-black-with-text {
+    background-color: black;
+    color: white;
 }
-
-.apple-pay-button-white-with-line-with-text
-{
-	background-color: white;
-	color: black;
-	border: .5px solid black;
+.apple-pay-button-white-with-text {
+    background-color: white;
+    color: black;
 }
-
-.apple-pay-button-with-text.apple-pay-button-black-with-text > .logo
-{
-	background-image: -webkit-named-image(apple-pay-logo-white);
-	background-color: black;
+.apple-pay-button-white-with-line-with-text {
+    background-color: white;
+    color: black;
+    border: .5px solid black;
 }
-
-.apple-pay-button-with-text.apple-pay-button-white-with-text > .logo
-{
-	background-image: -webkit-named-image(apple-pay-logo-black);
-	background-color: white;
+.apple-pay-button-with-text.apple-pay-button-black-with-text > .logo {
+    background-image: -webkit-named-image(apple-pay-logo-white);
+    background-color: black;
 }
-
-.apple-pay-button-with-text.apple-pay-button-white-with-line-with-text > .logo
-{
-	background-image: -webkit-named-image(apple-pay-logo-black);
-	background-color: white;
+.apple-pay-button-with-text.apple-pay-button-white-with-text > .logo {
+    background-image: -webkit-named-image(apple-pay-logo-black);
+    background-color: white;
 }
-
-.apple-pay-button-with-text > .text
-{
-	font-family: -apple-system;
-	font-size: calc(1em * var(--apple-pay-scale));
-	font-weight: 300;
-	align-self: center;
-	margin-right: calc(2px * var(--apple-pay-scale));
+.apple-pay-button-with-text.apple-pay-button-white-with-line-with-text > .logo {
+    background-image: -webkit-named-image(apple-pay-logo-black);
+    background-color: white;
 }
-
-.apple-pay-button-with-text > .logo
-{
-	width: calc(35px * var(--scale));
-	height: 100%;
-	background-size: 100% 60%;
-	background-repeat: no-repeat;
-	background-position: 0 50%;
-	margin-left: calc(2px * var(--apple-pay-scale));
-	border: none;
+.apple-pay-button-with-text > .text {
+    font-family: -apple-system;
+    font-size: calc(1em * var(--apple-pay-scale));
+    font-weight: 300;
+    align-self: center;
+    margin-right: calc(2px * var(--apple-pay-scale));
+}
+.apple-pay-button-with-text > .logo {
+    width: calc(35px * var(--scale));
+    height: 100%;
+    background-size: 100% 60%;
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+    margin-left: calc(2px * var(--apple-pay-scale));
+    border: none;
+}
 }
